[project]
name = "jsoncurrent"
version = "0.1.0"
description = "Parse streamed JSON data incrementally."
authors = [{ name = "Richard Antao", email = "rich@vitalearning.ca" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["json", "streaming", "llm", "parser", "patch", "openai", "anthropic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: General",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
    "twine>=5.1.1",
]

[project.urls]
Homepage = "https://github.com/richardantao/jsoncurrent-py"
Repository = "https://github.com/richardantao/jsoncurrent-py"
Issues = "https://github.com/richardantao/jsoncurrent-py/issues"
Changelog = "https://github.com/richardantao/jsoncurrent-py/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["jsoncurrent"]

[tool.ruff]
target-version = "py310"
line-length = 100
